--- a/public/index.html
+++ b/public/index.html
@@ -16,8 +16,8 @@
 	<meta name="apple-mobile-web-app-status-bar-style" content="black" />
 
 
-	<link rel="stylesheet" type="text/css" href="http://teddyprojekt.tk/css/main.css">
-	<script type="application/javascript" src="http://teddyprojekt.tk/js/main.js"></script>
+	<link rel="stylesheet" type="text/css" href="index/main.css">
+	<script type="application/javascript" src="index/main.js"></script>
 	<style type="text/css">
 		#content{
 			text-align: center;
