--- a/public/index.html
+++ b/public/index.html
@@ -16,26 +16,8 @@
 	<meta name="apple-mobile-web-app-status-bar-style" content="black" />
 
 
-	<link rel="stylesheet" type="text/css" href="index/main.css">
-	<script type="application/javascript" src="index/main.js"></script>
-	<style type="text/css">
-		#content{
-			text-align: center;
-		}
-		.information ul{
-			margin-top: 0px;
-		}
-		p{
-			margin-top: 10px;
-		}
-		.information .left{
-			width:40%;
-		}
-		.information .right{
-			text-align: left;
-			width:60%;
-		}
-	</style>
+	<link rel="stylesheet" type="text/css" href="https://www.teddyprojekt.tk/css/main.css">
+	<script type="application/javascript" src="https://www.teddyprojekt.tk/js/main.js"></script>
 	<script src="filer/config.js"></script>
 	<script type="text/javascript">
 		var versioner = [{
@@ -73,6 +55,40 @@
 					var row = document.createElement('div');
 						row.setAttribute('class', 'row');
 						var leftcol = document.createElement('div');
+							leftcol.setAttribute('class', 'left previewimg');
+							leftcol.setAttribute('style', 'background-image: url(\'filer/preview/' + versioner[i].img + '\');background-position: center;');
+						row.appendChild(leftcol);
+						var rightcol = document.createElement('div');
+							rightcol.setAttribute('class', 'right descript');
+							var head = document.createElement('span');
+								head.setAttribute('class', 'h3');
+								var headtext = document.createTextNode(versioner[i].namn);
+								head.appendChild(headtext);
+							rightcol.appendChild(head);
+							var previewimg = document.createElement('img');
+								previewimg.setAttribute('src', 'filer/preview/' + versioner[i].img);
+								previewimg.setAttribute('class', 'previewbild');
+							rightcol.appendChild(previewimg);
+							var info = document.createElement('p');
+								var infotext = document.createTextNode(versioner[i].beskrivning);
+								info.appendChild(infotext);
+							rightcol.appendChild(info);
+							var button = document.createElement('a');
+								button.setAttribute('href', versioner[i].lank);
+								button.setAttribute('class', 'button');
+								button.setAttribute('target', '_blank');
+								var buttontext = document.createTextNode('Till sidan');
+								button.appendChild(buttontext);
+							rightcol.appendChild(button);
+						row.appendChild(rightcol);
+					container.appendChild(row);
+				wrapper.appendChild(container);
+				/*
+				var container = document.createElement('div');
+					container.setAttribute('class', 'tablecontainer information');
+					var row = document.createElement('div');
+						row.setAttribute('class', 'row');
+						var leftcol = document.createElement('div');
 							leftcol.setAttribute('class', 'left');
 							var previewimg = document.createElement('img');
 								previewimg.setAttribute('src', 'filer/preview/' + versioner[i].img);
@@ -102,6 +118,7 @@
 						row.appendChild(rightcol);
 					container.appendChild(row);
 				wrapper.appendChild(container);
+				*/
 			};
 		};
 	</script>
