--- a/public/index.html
+++ b/public/index.html
@@ -24,27 +24,27 @@
 			namn: 'Patientvyn',
 			beskrivning: 'Denna vyn är till för patienten, förenklad version och registreringen är inte bindande.',
 			lank: 'app.html',
-			img: 'app.png'
+			img: 'app.jpg'
 		},{
 			namn: 'Vy för köket',
 			beskrivning: 'Denna vyn är till för köket. Data i realtid, där köket får feedback om vad patienterna tyckte om maten som serverats på sjukhuset. Avidentifierad information.',
 			lank: 'koket.html',
-			img: 'koket.png'
+			img: 'koket.jpg'
 		},{
 			namn: 'Vy för personalen på avdelningen',
 			beskrivning: 'Denna vy är inte kopplad till resterande system i nuläget utan är mer för att visa på hur informationen ska kunna visualiseras.',
 			lank: 'personal.html',
-			img: 'personal.png'
+			img: 'personal.jpg'
 		},{
 			namn: 'Vy som visar beställningslappar',
 			beskrivning: 'Försök att visualisera vilken information som finns i nuläget och hur det kan se ut på matbrickan.',
 			lank: 'bestallning.html',
-			img: 'bestall.png'
+			img: 'bestall.jpg'
 		},{
 			namn: 'Registrering',
 			beskrivning: 'Visar hur registreringsprocessen kan se ut.',
 			lank: 'skapakonto.html',
-			img: 'reg.png'
+			img: 'reg.jpg'
 		}];
 		function load(){
 			var wrapper = document.getElementById('content');
