--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
 	<meta property="og:site_name" content="Matdags">
 	<meta property="og:title" content="Matdags">
 	<meta property="og:description" content="Projekt som arbetar fram en aplikation vilket gör att patienterna själva ska kunna beställa sin mat när de ligger inne. Detta för att öka patientens självbestämmande, daglig kaloriräkning och återkoppling om nöjdhet tillbaka till köket.">
-	<meta property="og:url" content="http://www.matdags.tk/">
+	<meta property="og:url" content="https://www.matdags.teddyprojekt.se/">
 	<meta name="description" content="Projekt som arbetar fram en aplikation vilket gör att patienterna själva ska kunna beställa sin mat när de ligger inne. Detta för att öka patientens självbestämmande, daglig kaloriräkning och återkoppling om nöjdhet tillbaka till köket.">
 	<meta name="keywords" content="sjuksköterska, teddy, projekt, teddyprojekt, slutanteckning, lathund, pillerräknare, pillerraknare, html, css, javascript, jquery, musik, foto, totaltystnad, teddykladdkak, teddy__kladdkaka, teddysweden, eHälsa, eNursing, eHealth, medicinteknik, matbeställning, matdags, mat">
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
